# re2c-example

./: CMakeLists.txt  Main.c  ParseYMD.h  ParseYMD.re  vcpkg.json
